[package]
name = "mini-eth"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.32.0", features = ["full"] }
anyhow = "1.0.98"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
futures = "0.3.31"
futures-util = "0.3.31"
keccak-hash = "0.11.0"
rlp = "0.6.1"
secp256k1 = "0.31.1"